Fixed the alignment issues in project add form

--- a/trunk/web/css/addProject.css
+++ b/trunk/web/css/addProject.css
@@ -50,7 +50,7 @@ span.mandatoryStar {
 
 .formButton{
     position: relative;
-    left: 25px;
+    left: 5px;
 }
 #addProjectForm div li{
     list-style-type: none;
